<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/topToolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/top_toolbar" />

    <include
        android:id ="@+id/bottomToolbar"
        layout="@layout/bottom_toolbar"
        android:layout_alignParentBottom="true"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topToolbar"
        android:layout_above="@id/bottomToolbar"
        android:background="@color/lightblue">


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:gravity="center_vertical">

            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/gdisciplinas"
            android:layout_below="@+id/gridLayout"
            android:layout_above="@+id/tbBottom"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

            <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gridLayout"
            android:layout_below="@+id/tbTop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_planejador"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/tvPlanejador"
                android:layout_marginTop="35dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:layout_gravity="center"
                android:textSize="28dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_progressoCursos"
                android:textStyle="bold"
                android:textAlignment="center"
                android:id="@+id/tvProgressoCursos"
                android:layout_marginTop="35dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:textSize="28dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_matrizesInterativas"
                android:textAlignment="center"
                android:textStyle="bold"
                android:id="@+id/tvMatrizesInterativas"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_rowWeight="1"
                android:layout_gravity="bottom"
                android:textSize="28dp" />


        </GridLayout>
        </RelativeLayout>
`
    </ScrollView>


</RelativeLayout>