<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_profalf"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginTop="20dp"
        android:layout_columnSpan="2"
        android:gravity="center_horizontal" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_below="@+id/glListaProfessores"
        android:layout_marginTop="15dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:id="@+id/ivBeakman"
                    android:src="@drawable/beakman"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivBeakman"
                    android:id="@+id/tvBeakman"
                    android:text="@string/lbl_Beakman"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_below="@+id/tvBeakman"
                    android:layout_centerInParent="true"
                    android:rating="4"
                    android:progressTint="#b1fdf22c"
                    android:layout_marginTop="5dp"
                    android:isIndicator="true"/> "

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:id="@+id/ivBrown"
                    android:src="@drawable/brown"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivBrown"
                    android:id="@+id/tvBrown"
                    android:text="@string/lbl_Brown"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_below="@+id/tvBrown"
                    android:layout_centerInParent="true"
                    android:rating="4"
                    android:progressTint="#b1fdf22c"
                    android:layout_marginTop="5dp"
                    android:isIndicator="true"/> "

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:id="@+id/ivCerebro"
                    android:src="@drawable/cerebro"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivCerebro"
                    android:id="@+id/tvCerebro"
                    android:text="@string/lbl_Cerebro"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_below="@+id/tvCerebro"
                    android:layout_centerInParent="true"
                    android:rating="5"
                    android:progressTint="#b1fdf22c"
                    android:layout_marginTop="5dp"
                    android:isIndicator="true"/> "

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:id="@+id/ivFrink"
                    android:src="@drawable/frink"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentRight="false"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerInParent="true"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivFrink"
                    android:id="@+id/tvFrink"
                    android:text="Prof.Dr.John Frink"
                    android:layout_centerHorizontal="true"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp" />
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:layout_below="@+id/tvFrink"
                    android:layout_centerInParent="true"
                    android:rating="4"
                    android:progressTint="#b1fdf22c"
                    android:layout_marginTop="5dp"
                    android:isIndicator="true"/> "

            </RelativeLayout>




        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>